[package]
name = "raspberry_sht4x_bindings"
repository = "https://github.com/Dreaming-Codes/raspberry_sht4x_bindings"
description = "Rust bindings for the raspberry_sht4x C library"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.158"

[build-dependencies]
cc = "1.1.15"
bindgen = "0.70.1"
